# neuralnetwork

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  linear.h  test.cpp
NeuralNetwork/: AnyLayer.h  AnyOptimizer.h  AnyType.h  CMakeLists.txt  activation.cpp  activation.h  dataloader.cpp  dataloader.h  linear.cpp  linear.h  loss.cpp  loss.h  main.cpp  metrics.cpp  metrics.h  neuralbase.h  neuraldefines.h  optimizer.cpp  optimizer.h  random.cpp  random.h  sequential.cpp  sequential.h  sources.cmake
NeuralNetwork/tests/: test_activation.cpp  test_linear.cpp  test_loss.cpp  test_metrics.cpp  test_mnist.cpp  test_optimizer.cpp  test_random.cpp  test_sequential.cpp  test_utils.cpp  weights.txt
cmake/: FindCatch.cmake
